--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "office-ui-fabric-react": "6.189.2",
     "react": "16.8.5",
     "react-dom": "16.8.5",
-    "react-orgchart": "^1.0.5"
+    "react-orgchart": "^1.0.5",
+    "sp-pnp-js": "^3.0.10"
   },
   "resolutions": {
     "@types/react": "16.8.8"
