--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.8.5",
     "react-dom": "16.8.5",
     "react-orgchart": "^1.0.5",
+    "semver": "^7.3.5",
     "sp-pnp-js": "^3.0.10"
   },
   "resolutions": {
